photo list collection view

--- a/EpicSchoolHomework/Views/LocalPhotoList/LocalPhotosViewController.xib
+++ b/EpicSchoolHomework/Views/LocalPhotoList/LocalPhotosViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LocalPhotosViewController" customModule="EpicSchoolHomework" customModuleProvider="target">
             <connections>
+                <outlet property="photosCollectionView" destination="VnL-e4-b5F" id="3xF-Au-1Ih"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,7 +23,7 @@
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="VnL-e4-b5F">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="616"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="G8s-Pm-6ci">
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="c4w-Sr-KLK">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
