--- a/EpicSchoolHomework/Views/LocalPhotoList/LocalPhotoCollectionViewCell.xib
+++ b/EpicSchoolHomework/Views/LocalPhotoList/LocalPhotoCollectionViewCell.xib
@@ -21,7 +21,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aQ6-Hn-0yg">
                         <rect key="frame" x="0.0" y="0.0" width="215" height="201"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jXl-Ey-SiN">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jXl-Ey-SiN">
                                 <rect key="frame" x="0.0" y="0.0" width="215" height="201"/>
                             </imageView>
                         </subviews>
