--- a/EpicSchoolHomework/Views/Profile/UserProfileViewController.xib
+++ b/EpicSchoolHomework/Views/Profile/UserProfileViewController.xib
@@ -115,12 +115,22 @@
                         </button>
                     </subviews>
                 </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4BX-lZ-fTb">
+                    <rect key="frame" x="148" y="712" width="118" height="31"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Очистить кэш"/>
+                    <connections>
+                        <action selector="clearCashButtonTapped:" destination="-1" eventType="touchUpInside" id="lUM-6p-cvi"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="4BX-lZ-fTb" firstAttribute="top" secondItem="7H6-6a-3dV" secondAttribute="bottom" constant="100" id="IwY-eO-Mfc"/>
                 <constraint firstItem="7H6-6a-3dV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Kvw-Bw-bTl"/>
                 <constraint firstItem="7H6-6a-3dV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="RUM-4D-N4Q"/>
+                <constraint firstItem="4BX-lZ-fTb" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="W4S-gS-QQr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7H6-6a-3dV" secondAttribute="trailing" constant="20" id="fWR-zJ-ghf"/>
                 <constraint firstItem="7H6-6a-3dV" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="mJT-4u-WOZ"/>
             </constraints>
